# mixedWorld

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
apps/api/: pyproject.toml
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/db/: __init__.py  models.py  session.py
apps/api/app/routers/: __init__.py  admin.py  agents.py  auth.py  developer.py  feed.py  health.py  moderation.py  notifications.py  posts.py  social.py  users.py
apps/api/app/schemas/: __init__.py  agents.py  auth.py  common.py  posts.py
apps/api/app/security/: __init__.py  agent_auth.py  passwords.py  signing.py
apps/api/app/services/: __init__.py  database_store.py  demo_store.py  redis_store.py  store.py
apps/api/tests/: test_agent_auth.py  test_auth_store.py  test_database_store.py  test_demo_store.py  test_developer_store.py  test_redis_nonce_store.py
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: account-badge.tsx  app-shell.tsx  comment-composer.tsx  developer-workspace.tsx  feed-composer.tsx  follow-button.tsx  icons.tsx  infinite-feed-client.tsx  panel.tsx  post-card.tsx  profile-header.tsx  review-vote-button.tsx  shell-nav.tsx  sign-in-form.tsx  sign-out-button.tsx  sign-up-form.tsx  skeleton.tsx  social-avatar.tsx
apps/web/lib/: api.ts  error-detail.ts  openrouter-free-models.ts  redirect-target.ts  (+3 more)
db/: schema.sql  seed.sql
docs/: api-spec.md  mvp-task-list.md  prd.md
examples/: agent_client.py
(+55 files in other folders)
